# spaceg

./: .gitmodules  CMakeLists.txt  readme.md  todo.md
data/lua/: Player.lua  config.lua  main.lua  notices.md
data/lua/entity/: Entity.lua  Nebula.lua  Ship.lua  WorldMap.lua
data/lua/lib/: utils.lua
data/ui/: default.rcss  main_menu.rml
doc/: entities.md  gameplay.md  missions.md  plot.md
src/: Application.cpp  Application.h  Application.hpp  GameException.hpp  Log.cpp  Log.hpp  ResourceManager.cpp  ResourceManager.h  Types.h  Types.hpp  main.cpp
src/base/: Entity.cpp  Entity.hpp  Geometry.hpp  GraphicEntity.cpp  GraphicEntity.hpp  ObjectStorage.hpp  QuadTree.hpp
src/core/: SfmlMesh.cpp  SfmlMesh.h
src/entity/: Entity.h  Player.cpp  Player.h  Ship.cpp  Ship.h
src/game/: Bullet.hpp  Entity.cpp  Entity.h  Planet.cpp  Planet.h  Player.h  Ship.h  World.cpp  World.h  World.hpp  WorldChunk.hpp
src/graphic/: GraphicEntity.h  NebulaEntity.cpp  NebulaEntity.h  NebulaGraphic.cpp  NebulaGraphic.h  SfmlMesh.cpp  SfmlMesh.h  ShipGraphic.cpp  ShipGraphic.hpp  WorldGraphic.cpp  WorldGraphic.hpp
src/input/: SfmlInputManager.cpp  SfmlInputManager.hpp
src/lua/: EngineContext.cpp  EngineContext.hpp  LuaBinder.cpp  LuaBinder.hpp  LuaCamera.cpp  LuaCamera.hpp  LuaEntity.hpp  LuaGameState.cpp  LuaGameState.h  LuaGameState.hpp  LuaInput.cpp  LuaInput.hpp  LuaInterface.hpp  LuaSpriteEntity.cpp  LuaSpriteEntity.hpp  LuaUI.cpp  LuaUI.hpp  LuaUtil.hpp
src/render/: GraphicEntity.h  NebulaGraphic.cpp  NebulaGraphic.h  SfmlEntity.cpp  SfmlEntity.hpp  SfmlMesh.cpp  SfmlMesh.h  SfmlSprite.cpp  SfmlSprite.hpp  ShipGraphic.cpp  SpriteEntity.hpp  WorldGraphic.cpp  WorldGraphic.hpp
src/render/entity/: NebulaGraphic.cpp  NebulaGraphic.h  WorldGraphic.cpp  WorldGraphic.hpp
src/state/: BaseState.cpp  BaseState.hpp  GameState.cpp  GameState.h  IState.h  LuaGameState.h  MainMenu.cpp  MainMenu.h  State.h  State.hpp  StateManager.hpp
src/ui/: RenderInterface.cpp  RenderInterface.h  SfmlRenderInterface.cpp  SfmlRenderInterface.hpp  SfmlSystemInterface.cpp  SfmlSystemInterface.hpp  SfmlUtils.h  SystemInterface.cpp  SystemInterface.h
src/utils/: Geometry.hpp  JsonParser.cpp  JsonParser.hpp  Math.hpp  Random.cpp  Random.hpp
